--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ NEXT_PUBLIC_APPWRITE_MESSAGES_COLLECTION_ID=your_messages_collection_id
 MAILGUN_API_KEY=your_mailgun_api_key
 MAILGUN_DOMAIN=your_mailgun_domain
 MAILGUN_FROM_EMAIL=your_from_email@example.com
+
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_key
+STRIPE_SECRET_KEY=your_stripe_secret
+MAILGUN_API_KEY=your_mailgun_key
+MAILGUN_DOMAIN=your_domain
