--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.9.0",
     "appwrite": "^16.0.2",
     "express-rate-limit": "^7.4.1",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.10",
     "mailgun-js": "^0.22.0",
     "next": "14.2.15",
     "next-seo": "^6.6.0",
@@ -20,6 +21,7 @@
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^17.2.1",
     "winston": "^3.15.0"
   },
   "devDependencies": {
