--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
 NEXT_PUBLIC_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
-NEXT_PUBLIC_APPWRITE_PROJECT_ID=your_project_id
-NEXT_PUBLIC_APPWRITE_DATABASE_ID=your_database_id
-NEXT_PUBLIC_APPWRITE_USERS_COLLECTION_ID=your_users_collection_id
-NEXT_PUBLIC_APPWRITE_CONVERSATIONS_COLLECTION_ID=your_conversations_collection_id
-NEXT_PUBLIC_APPWRITE_MESSAGES_COLLECTION_ID=your_messages_collection_id
+NEXT_PUBLIC_APPWRITE_PROJECT_ID=projectid
+NEXT_PUBLIC_APPWRITE_DATABASE_ID=databaseid
+NEXT_PUBLIC_APPWRITE_USERS_COLLECTION_ID=users
+NEXT_PUBLIC_APPWRITE_SUBSCRIPTION_COLLECTION_ID=subscriptions
+NEXT_PUBLIC_APPWRITE_PAYMENTS_COLLECTION_ID=payments
+NEXT_PUBLIC_APPWRITE_CONVERSATIONS_COLLECTION_ID=conversations
+NEXT_PUBLIC_APPWRITE_MESSAGES_COLLECTION_ID=messages
 
 MAILGUN_API_KEY=your_mailgun_api_key
 MAILGUN_DOMAIN=your_mailgun_domain
 MAILGUN_FROM_EMAIL=your_from_email@example.com
 
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_key
-STRIPE_SECRET_KEY=your_stripe_secret
-MAILGUN_API_KEY=your_mailgun_key
-MAILGUN_DOMAIN=your_domain
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=publishkey
+STRIPE_SECRET_KEY=secretkey
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
