--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=publishkey
 STRIPE_SECRET_KEY=secretkey
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+
+# PayPal Configuration
+# NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+# PAYPAL_SECRET_KEY=
+
+NEXT_PUBLIC_PAYPAL_MODE=sandbox # or 'live' for production
